tempfile/blst/blst/bindings/blst.h

typedef __UINT64_TYPE__ uint64_t;
typedef _Bool bool; /* it's assumed that cgo calls modern enough compiler */
#   define bool _Bool
#   define bool int
typedef uint64_t limb_t;
typedef struct { limb_t l[256/8/sizeof(limb_t)]; } blst_fr;
typedef struct { limb_t l[384/8/sizeof(limb_t)]; } blst_fp;
/* 0 is "real" part, 1 is "imaginary" */
typedef struct { blst_fp fp[2]; } blst_fp2;
/*
 * BLS12-381-specific point operations.
 */
typedef struct { blst_fp x, y, z; } blst_p1;
typedef struct { blst_fp2 x, y, z; } blst_p2;